--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+    height:100%;
+    width:100%;
+
 }
 .navBar{
-  height:100%;
-  max-height: 200px;
+  height:5em;
+  /*max-height: 300px;*/
   width: 100%;
-  background-color: blue;
+  background-color: aliceblue;
+    box-shadow: antiquewhite;
 }
