--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-body {
+/*body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
     height:100%;
     width:100%;
 
-}
+}*/
 .navBar{
   height:5em;
   /*max-height: 300px;*/
@@ -15,4 +15,11 @@ body {
 }
 .floatRight{
   float: right;
+}
+.navStyle{
+  background: #f3f4f5;
+    padding: .78571429rem 1rem;
+    box-shadow: none;
+    border: 1px solid #d4d4d5;
+    border-radius: .28571429rem;
 }
